--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,15 @@ footer {
 
   #column-3 {
     background-color: #ffe085;
+    width: 100%;
   }
 
   footer {
     background-color: #0e2144;
+  
+  }
+  .col-3 {
+    width: 50%;
   }
   
 }
@@ -104,4 +109,7 @@ footer {
     background-color: #cfe2f3;
   }
    
+  .col-3 {
+    width: 33.3%;
+  }
 }
